Add plot of monthly rides by type

--- a/analysis/Merge and sample data.ipynb
+++ b/analysis/Merge and sample data.ipynb
@@ -26,13 +26,13 @@
    "outputs": [],
    "source": [
     "config = {\n",
-    "    \"tlc_raw_data_path\" : \"../raw_data/tlc/\",\n",
-    "    \"uber_raw_data_path\" : \"../raw_data/uber/\",\n",
+    "    \"tlc_raw_data_path\" : \"../data/raw_data/tlc/\",\n",
+    "    \"uber_raw_data_path\" : \"../data/raw_data/uber/\",\n",
     "    \n",
-    "    \"taxi_zones_shapefile\": \"../shapefiles/taxi_zones/taxi_zones.shp\",\n",
-    "    \"nyc_tract_shapefile\": \"../shapefiles/nyct2010_15b/nyct2010.shp\",\n",
+    "    \"taxi_zones_shapefile\": \"../data/shapefiles/taxi_zones/taxi_zones.shp\",\n",
+    "    \"nyc_tract_shapefile\": \"../data/shapefiles/nyct2010_15b/nyct2010.shp\",\n",
     "    \n",
-    "    \"parquet_output_path\": \"../processed_data/\"\n",
+    "    \"parquet_output_path\": \"../data/processed_data/\"\n",
     "}"
    ]
   },
@@ -450,7 +450,6 @@
    "outputs": [],
    "source": [
     "# map coordinates to taxi zones\n",
-    "\n",
     "all_trips['pickup_taxizone_id'] = all_trips.map_partitions(\n",
     "    assign_taxi_zones,\n",
     "    \"pickup_longitude\", \"pickup_latitude\", \"pickup_taxizone_id\",\n",
@@ -462,21 +461,21 @@
     "    meta=('dropoff_taxizone_id', np.float64)\n",
     ")\n",
     "\n",
-    "all_trips['dropoff_taxizone_tract_id'] = all_trips['pickup_taxizone_id'].copy()\n",
-    "all_trips['dropoff_taxizone_tract_id'] = np.nan\n",
-    "all_trips['dropoff_taxizone_tract_id'] = all_trips.map_partitions(\n",
-    "    assign_nyc_tracts,\n",
-    "    \"dropoff_longitude\", \"dropoff_latitude\", \"dropoff_taxizone_tract_id\",\n",
-    "    meta=('dropoff_taxizone_tract_id', np.float64)\n",
-    ")\n",
-    "\n",
-    "all_trips['pickup_taxizone_tract_id'] = all_trips['pickup_taxizone_id'].copy()\n",
-    "all_trips['pickup_taxizone_tract_id'] = np.nan\n",
-    "all_trips['pickup_taxizone_tract_id'] = all_trips.map_partitions(\n",
-    "    assign_nyc_tracts,\n",
-    "    \"pickup_longitude\", \"pickup_latitude\", \"pickup_taxizone_tract_id\",\n",
-    "    meta=('pickup_taxizone_tract_id', np.float64)\n",
-    ")"
+    "# map coordinates to nyc tracts\n",
+    "# all_trips['pickup_tract_id'] = all_trips['pickup_taxizone_id'].copy()\n",
+    "# all_trips['pickup_tract_id'] = np.nan\n",
+    "# all_trips['pickup_tract_id'] = all_trips.map_partitions(\n",
+    "#     assign_nyc_tracts,\n",
+    "#     \"pickup_longitude\", \"pickup_latitude\", \"pickup_tract_id\",\n",
+    "#     meta=('pickup_tract_id', np.float64)\n",
+    "# )\n",
+    "# all_trips['dropoff_tract_id'] = all_trips['pickup_taxizone_id'].copy()\n",
+    "# all_trips['dropoff_tract_id'] = np.nan\n",
+    "# all_trips['dropoff_tract_id'] = all_trips.map_partitions(\n",
+    "#     assign_nyc_tracts,\n",
+    "#     \"dropoff_longitude\", \"dropoff_latitude\", \"dropoff_tract_id\",\n",
+    "#     meta=('dropoff_tract_id', np.float64)\n",
+    "# )"
    ]
   },
   {
